# conv-filter

./: junos-filter.conf  pyproject.toml
src/conv_filter/: Filter.py  VDS.py  conv_filter.py  junos.py  parser.py
tests/: test_conv_filter.py
