
[tool.poetry]
name = "conv-filter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include="*", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
convert = "conv_filter.conv_filter:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
